--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "chartist": "^0.11.0",
+    "chartist": "^0.10.1",
     "moment": "^2.19.1",
+    "v-chartist": "^0.1.5",
     "vue": "^2.4.4",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
