--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.4.4",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
+    "vue-socket.io": "^2.1.1-a",
     "vuex": "^3.0.0"
   },
   "devDependencies": {
