--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chartist": "^0.10.1",
     "moment": "^2.19.1",
     "v-chartist": "^0.1.5",
+    "vee-validate": "^2.0.0-rc.19",
     "vue": "^2.4.4",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
