--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "bootstrap": "^3.3.7",
     "chartist": "^0.10.1",
     "moment": "^2.19.1",
+    "survey-vue": "^0.12.35",
     "v-chartist": "^0.1.5",
     "vee-validate": "^2.0.0-rc.19",
     "vue": "^2.4.4",
+    "vue-recaptcha": "^0.4.0",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
     "vue-socket.io": "^2.1.1-a",
