--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "chartist": "^0.10.1",
+    "jquery": "^3.2.1",
     "moment": "^2.19.1",
     "survey-vue": "^0.12.35",
     "v-chartist": "^0.1.5",
