--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chartist": "^0.10.1",
     "jquery": "^3.2.1",
     "moment": "^2.19.1",
+    "raven-js": "^3.20.1",
     "survey-vue": "^0.12.35",
     "v-chartist": "^0.1.5",
     "vee-validate": "^2.0.0-rc.19",
