--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 api:
   build: .
-  command: python /usr/src/app/api.py
+  command: python /usr/src/app/api.py dev
   ports:
    - "5000:5000"
   volumes:
